update branding from Cymbal Shops to Firdous Shops in UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -778,7 +778,7 @@
         <nav class="navbar">
             <a href="#" class="logo" onclick="goHome()">
                 <div class="logo-icon">🛍️</div>
-                <span class="logo-text">Cymbal Shops</span>
+                <span class="logo-text">Firdous Shops</span>
             </a>
             <div class="nav-controls">
                 <span class="user-info" id="userInfo"></span>
@@ -874,7 +874,7 @@
     <!-- Footer -->
     <footer id="footer" style="display: none;">
         <div class="footer-content">
-            <div class="footer-logo">Cymbal Shops</div>
+            <div class="footer-logo">Firdous Shops</div>
             <div class="footer-links">
                 <a href="#" onclick="switchTab('shop'); return false;">Shop</a>
                 <a href="#" onclick="switchTab('cart'); return false;">Cart</a>
